[project]
name = "git-mud"
version = "1.0.0"
authors = [
  { name="Jasur Sadikov", email="jasur@sadikoff.com" },
]
description = "Multi repository git utility. Manage multiple git-repositories simultaneously."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jasursadikov/mud"
Issues = "https://github.com/jasursadikov/mud/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
