[build-system]
requires = ["hatchling", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mud-git"
dynamic = ["version"]
authors = [{ name = "Jasur Sadikov", email = "jasur@sadikoff.com" }]
description = "Multi repository git utility. Manage multiple git-repositories simultaneously."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["prettytable"]

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/mud"]

[project.scripts]
mud = "mud:run"

[project.urls]
Homepage = "https://github.com/jasursadikov/mud"
Issues = "https://github.com/jasursadikov/mud/issues"
